<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_login_register"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo1" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottielogin"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/login" />

        </LinearLayout>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/welcome"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:backgroundTint="@color/button_google"
            android:drawableLeft="@drawable/logogoggle"
            android:text="@string/singin_google"
            android:textColor="@color/white"
            app:cornerRadius="10dp" />

        <!--        <com.airbnb.lottie.LottieAnimationView-->
        <!--            android:id="@+id/lottieloading"-->
        <!--            android:layout_width="150dp"-->
        <!--            android:layout_height="150dp"-->
        <!--            android:layout_gravity="center"-->
        <!--            app:lottie_rawRes="@raw/loading"-->
        <!--            android:visibility="gone"-->
        <!--            app:lottie_autoPlay="true"-->
        <!--            app:lottie_loop="true"-->
        <!--            tools:visibility="visible"/>-->
        <LinearLayout
            android:id="@+id/bot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/learn"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>