<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.HomePageFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/card_nameuser" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinslight"
                        android:text="@string/subtitle"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/course"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:backgroundTint="@color/grey"
                        android:drawableTop="@drawable/logogoggle"
                        android:padding="16dp"
                        android:text="@string/course"
                        android:textColor="@color/black"
                        app:cornerRadius="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/games"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:backgroundTint="@color/grey"
                        android:drawableTop="@drawable/logogoggle"
                        android:padding="16dp"
                        android:text="@string/games"
                        android:textColor="@color/black"
                        app:cornerRadius="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/article"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:backgroundTint="@color/grey"
                        android:drawableTop="@drawable/logogoggle"
                        android:padding="16dp"
                        android:text="@string/article"
                        android:textColor="@color/black"
                        app:cornerRadius="20dp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/main_features"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/card_main_features"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/vertical_logo_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:background="@drawable/shadow2"
                                android:padding="8dp"
                                android:src="@drawable/scan" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/name"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/arrow"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginEnd="30dp"
                            android:padding="8dp"
                            android:src="@drawable/baseline_arrow" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="20dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:background="@drawable/shadow2"
                                    android:padding="8dp"
                                    android:src="@drawable/scan" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/name"
                                    android:textColor="@color/black" />

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/translate"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:backgroundTint="@color/button_google"
                        android:text="@string/scan"
                        app:cornerRadius="20dp" />
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/information"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/pict_carousel"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:iss_auto_cycle="true"
                        app:iss_corner_radius="30"
                        app:iss_delay="3000"
                        app:iss_period="3000" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/article"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/button_google"
                    android:text="@string/seedetails"
                    android:textAllCaps="false"
                    android:textSize="10sp"
                    app:cornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SmallSp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                tools:listitem="@layout/item_article" />
        </LinearLayout>
    </FrameLayout>
</ScrollView>